# dopek-cli

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.7fb3fa0  asd.h  main.cpp  main.cpp.bak  patch_main.patch
.qtcreator/: CMakeLists.txt.user.7fb3fa0  CMakeLists.txt.user.d07e1ae
.stfolder/: syncthing-folder-44b3ac.txt
core/accounting/models/: counterparty.h  invoice.h  invoice_line.h
core/accounting/repos/: counterparty_repo.cpp  counterparty_repo.h  invoice_line_repo.cpp  invoice_line_repo.h  invoice_repo.cpp  invoice_repo.h
core/accounting/services/: counterparty_service.cpp  counterparty_service.h  invoice_line_service.cpp  invoice_line_service.h  invoice_service.cpp  invoice_service.h
core/common/services/: result.h
core/common/util/: ids.h
core/control/models/: overhead.h  rate_card.h  targets.h
core/control/repos/: overhead_repo.cpp  overhead_repo.h  rate_card_repo.cpp  rate_card_repo.h  targets_repo.cpp  targets_repo.h
core/control/services/: overhead_service.cpp  overhead_service.h  rate_card_service.cpp  rate_card_service.h  targets_service.cpp  targets_service.h
core/inventory/models/: inventory_balance.h  location.h  machine.h  material.h  standard_working_regime.h  tool.h
core/inventory/repos/: inventory_balance_repo.cpp  inventory_balance_repo.h  location_repo.cpp  location_repo.h  machine_repo.cpp  machine_repo.h  material_repo.cpp  material_repo.h  standard_working_regime_repo.cpp  standard_working_regime_repo.h  tool_repo.cpp  tool_repo.h
core/inventory/services/: inventory_balance_service.cpp  inventory_balance_service.h  location_service.cpp  location_service.h  machine_service.cpp  machine_service.h  material_service.cpp  material_service.h  standard_working_regime_service.cpp  standard_working_regime_service.h  tool_service.cpp  tool_service.h
core/ledger/models/: ledger_event.h  valuation_posting.h
core/ledger/repos/: ledger_event_repo.cpp  ledger_event_repo.h  valuation_posting_repo.cpp  valuation_posting_repo.h
core/ledger/services/: ledger_event_service.cpp  ledger_event_service.h  valuation_posting_service.cpp  valuation_posting_service.h
core/models/: counterparty.h  inventory.h  invoice.h  invoice_line.h  material.h  posting.h  project.h
core/production/models/: operation.h  operation_code.h  part.h  process_plan.h  project.h
core/production/repos/: operation_code_repo.cpp  operation_code_repo.h  operation_repo.cpp  operation_repo.h  part_repo.cpp  part_repo.h  process_plan_repo.cpp  process_plan_repo.h  project_repo.cpp  project_repo.h
core/production/services/: operation_service.cpp  operation_service.h  part_service.cpp  part_service.h  process_plan_service.cpp  process_plan_service.h  project_service.cpp  project_service.h
core/repos/: counterparty_repo.cpp  counterparty_repo.h  counterparty_service.cpp  counterparty_service.h  inventory_repo.cpp  inventory_repo.h  invoice_line_repo.cpp  invoice_line_repo.h  invoice_repo.cpp  invoice_repo.h  material_repo.cpp  material_repo.h  posting_repo.cpp  posting_repo.h  project_repo.cpp  project_repo.h
core/services/: counterparty_service.cpp  counterparty_service.h  inventory_service.cpp  inventory_service.h  invoice_line_service.cpp  invoice_line_service.h  invoice_service.cpp  invoice_service.h  material_service.cpp  material_service.h  posting_service.cpp  posting_service.h  project_service.cpp  project_service.h  result.h
